fix: mobile menu not showing properly

--- a/src/components/Layout/Navbar/MobileMenu/MobileMenu.module.scss
+++ b/src/components/Layout/Navbar/MobileMenu/MobileMenu.module.scss
@@ -17,6 +17,7 @@
   border-radius: 5px;
   background-color: var(--white);
   position: relative;
+  z-index: 11;
 
   &.menuOpen {
     height: 0;
